# BlockChain-s

./: .gitignore  Cargo.toml  README.md  name.list  other.usr  run_nodes.sh  some_example_blocks
.github/workflows/: rust.yml
benches/: mining_OPT.rs  mining_comparaison.rs
src/: friendly_name.rs  lib.rs  main.rs  peer.rs
src/block_chain/: acount.rs  block.rs  blockchain.rs  interconnect.rs  kademlia.rs  mod.rs  node.rs  shared.rs  transaction.rs  user.rs
src/block_chain/node/: client.rs  miner.rs  server.rs
src/block_chain/node/network/: mod.rs
