[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.1", features = ["derive"] }
futures = "0.3.28"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
smol = "1.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "mining_comparaison"
harness = false

