[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
chrono = "0.4.31"
clap = { version = "4.3.1", features = ["derive"] }
dryoc = { version = "0.5.1", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
